# stardew-ai-npc

./: .gitignore  README.md
bridge/: .env.example  pyproject.toml
bridge/bridge/: llm.py  mcp_client.py  protocol.py  server.py
bridge/tests/: test_echo_roundtrip.py  test_llm.py  test_protocol.py
docs/: SETUP-GUIDE.md
docs/superpowers/plans/: 2026-05-09-stardew-ai-npc.md  2026-05-09-state-injection.md
docs/superpowers/specs/: 2026-05-09-stardew-ai-npc-design.md  2026-05-09-state-injection-design.md
mod/: ModEntry.cs  StardewAiMod.csproj  manifest.json
mod/Game/: StateCollector.cs
mod/Net/: BridgeClient.cs  Messages.cs
mod/Patches/: NpcCheckActionPatch.cs
scripts/: install_mod.sh  run_bridge.sh
