[project]
name = "stardew-ai-bridge"
version = "0.1.0"
description = "WebSocket bridge between SMAPI mod and DeepSeek."
requires-python = ">=3.11"
dependencies = [
    "websockets>=12.0",
    "pydantic>=2.6",
    "openai>=1.30",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bridge*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
